--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-elements": "^0.19.0",
+    "react-native-swipeout": "^2.3.3",
     "react-redux": "^5.0.7",
     "react-router-native": "^4.2.0",
     "redux": "^3.7.2",
